change colors , fix nav collapse

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -18,15 +18,15 @@ $blue: #007bff !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
-$red: #dc3545 !default;
+$red: #f20505 !default;
 $orange: #bd5d38 !default;
-$yellow: #ffc107 !default;
+$yellow: #f2be22 !default;
 $green: #28a745 !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
 
-$primary: #0d0d0d;
-$secondary: #595959;
+$primary: #262612;
+$secondary: #bf7a24;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
